# bloodhound

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  KWASA_KWASA_DISTRIBUTED_ENHANCEMENT_ANALYSIS.md  LICENSE  Makefile  README.md  bloodhound.tex  bloodhound.toml  config.json  docker-compose.yml  env.example  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
backend/: app_manager.py  main.py
backend/api/middleware/: auth.py  logging.py
backend/api/routes/: chat_routes.py  experiment_routes.py  graph_routes.py  plot_routes.py  search_routes.py  visualization_routes.py
backend/core/: ai_chat.py  analyzer.py  db_manager.py  embedder.py  llm_learner.py  p2p.py  resource_manager.py
backend/core/federated/: base.py  client.py
backend/pipelines/: genomics_manager.py  metabolomics_manager.py
backend/utils/bio/: ms_utils.py  network_utils.py  pathway_utils.py  vcf_utils.py
backend/utils/config/: config_manager.py
backend/utils/security/: authentication.py  encryption.py
backend/utils/task/: task_manager.py
backend/utils/tracking/: file_tracker.py
backend/utils/visualization/: graph_viz.py  plotters.py
config/experimental_templates/: genomics.yaml  metabolomics.yaml
demo/: README.md  README_TURBULANCE_DEMO.md  demo.py  distributed_metabolomics_validation.py  mufakose_validation.py  pyproject.toml  requirements.txt  run_tests.py  validation_experiment.py
demo/datasets/genomics/: sample_metadata.json
demo/datasets/metabolomics/: sample_spectra.json
demo/src/genome/: __init__.py  genome.md  genome_transform.py  genome_validation.py
demo/src/network/: network.md  network.py
demo/src/search/: __init__.py  mufakose_framework.py  search.md  search.py
demo/src/sequence/: __init__.py  s_entropy_transform.py  sequence.md  validation.py
demo/src/spectrometry/: __init__.py  distributed_ms_network.py  molecular_coordinates.py  mufakose_metabolomics.py
demo/tests/: __init__.py  test_basic_functionality.py
demo/turbulance_scripts/: distributed_genomics_analysis.trb  distributed_metabolomics_analysis.trb  distributed_simulation_framework.trb  run_distributed_demo.trb
docs/algorithms/: mufakose-audio.tex  mufakose-genomics.tex  mufakose-pharma.tex  mufakose-vision.tex  references.bib  zangalewa-algorithm.tex
docs/foundation/: coordinate-transformation.tex  economic-systems.tex  goromigo-kinetic-linear-accelerator.tex  gps.md  helicopter.tex  mass-spec.md  necessity.md  precision-time.tex  recursive-time.md  server-theory.md  space-travel.tex  teleportation.md  truth-systems.tex  universal-problem-solvability.md  zero-lag-systems.tex  zero-time-travel.tex
docs/garden/: distributed-genomics.tex  proof-validated-compression.tex  st-stellas-genome.tex  st-stellas-molecular-language.tex  st-stellas-spectroscopy.tex  st-stellas.tex
docs/theory/: sighthound.md  space-gas.tex  temporal-integration.md
docs/virtual-machine/: Bloodhound-Ladder.md  bloodhound-vm-comprehensive-blueprint.md  initial-requirements-meaninglessness.tex  no-boundary-thermodynamic-foundations.tex  virtual-machine-language-models.md  virtual-machine-theory.tex
frontend/: package.json
frontend/src/components/: ChatFeedback.jsx  ChatInterface.jsx  ExperimentPlot.jsx  KnowledgeGraph.jsx  Results.jsx  SearchBar.jsx
frontend/src/services/: api.jsx
frontend/src/styles/: chat.css
src/bloodhound_vm_core/: Cargo.toml
src/bloodhound_vm_core/src/: consciousness.rs  coordination.rs  entropy.rs  lib.rs  no_boundary_engine.rs  oscillatory.rs  parallelization.rs  philosophy.rs  processing.rs  runtime.rs  substrate.rs
src/core/jungfernstieg/: Cargo.toml
src/core/jungfernstieg/src/: biological.rs  circulation.rs  economy.rs  interfaces.rs  lib.rs  monitoring.rs  noise.rs  optimization.rs  oscillatory_lagrangian.rs  substrate.rs  vessels.rs
st_hurbet/docs/computing/trajectory/: trajectory-computing.tex
st_hurbet/validation/: __init__.py  categorical_memory.py  distributed.py  enhancement.py  generate_validation_panels.py  maxwell_demon.py  run_validation.py  s_entropy.py  ternary.py  trajectory.py
st_hurbet/validation/panels/: bounded-phase-space-virtual-machine.tex
