[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bloodhound"
version = "1.0.0"
description = "A comprehensive platform for scientific experiment management and analysis"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "black>=21.7b0",
    "isort>=5.9.3",
    "flake8>=3.9.2",
    "mypy>=0.910",
    "pytest>=6.2.5",
    "pytest-asyncio>=0.15.1",
    "pytest-cov>=2.12.1",
]
docs = [
    "sphinx>=4.1.2",
    "sphinx-rtd-theme>=0.5.2",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=backend --cov-report=term-missing"
testpaths = ["tests"] 