[metadata]
name = bloodhound
description = A comprehensive platform for scientific experiment management and analysis
author = Kundai Sachikonye
author_email = kundai.f.sachikonye@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages =
    backend
install_requires =
    fastapi>=0.68.0
    uvicorn>=0.15.0
    pydantic>=1.8.2
python_requires = >=3.8
package_dir =
    =.
zip_safe = no

[options.extras_require]
dev =
    black>=21.7b0
    isort>=5.9.3
    flake8>=3.9.2
    mypy>=0.910
    pytest>=6.2.5
    pytest-asyncio>=0.15.1
    pytest-cov>=2.12.1
docs =
    sphinx>=4.1.2
    sphinx-rtd-theme>=0.5.2

[options.package_data]
backend = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --cov=backend --cov-report=term-missing

[isort]
profile = black
multi_line_output = 3 