[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-validation-experiment"
version = "0.1.0"
description = "Validation experiment for distributed genomics network with S-entropy coordinates"
authors = [{ name = "Bloodhound Research" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "biopython>=1.79",
    "scikit-learn>=1.0.0",
    "networkx>=2.6",
    "requests>=2.25.0",
    "asyncio-mqtt>=0.11.0",
    "cryptography>=3.4.0",
    "hashlib-compat>=1.0.0",
    "psutil>=5.8.0",
    "memory-profiler>=0.60.0",
    "pytest>=6.2.0",
    "pytest-asyncio>=0.18.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.optional-dependencies]
dev = ["black>=21.0.0", "flake8>=3.9.0", "mypy>=0.910", "pre-commit>=2.15.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
